--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,9 @@ jobs:
         uses: jdx/mise-action@v2
       - name: Setup Pages
         uses: actions/configure-pages@v4
+      - name: Build wasm
+        working-directory: ./web-app
+        run: pnpm build:wasm
       - name: Install dependencies
         working-directory: ./web-app
         run: pnpm install --frozen-lockfile
