--- a/web-app/package.json
+++ b/web-app/package.json
@@ -7,7 +7,9 @@
 		"build": "next build",
 		"build:wasm": "wasm-pack build ../lgtmoon-wasm --target web --out-dir ../web-app/pkg && mkdir -p ./public/pkg && cp ./pkg/*.wasm ./public/pkg/",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"format": "biome check --write .",
+		"format:staged": "biome check --write --staged"
 	},
 	"dependencies": {
 		"@radix-ui/react-label": "^2.1.2",
