Store on browser storage

--- a/web-app/biome.json
+++ b/web-app/biome.json
@@ -7,7 +7,14 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"ignore": ["node_modules", ".next", "out", "public"]
+		"ignore": [
+			"node_modules",
+			".next",
+			"out",
+			"public",
+			"pkg",
+			"eslint.config.mjs"
+		]
 	},
 	"formatter": {
 		"enabled": true,
