--- a/web-app/package.json
+++ b/web-app/package.json
@@ -19,8 +19,10 @@
 		"idb": "^8.0.2",
 		"lucide-react": "^0.475.0",
 		"next": "15.1.7",
+		"next-themes": "^0.4.4",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"sonner": "^2.0.1",
 		"tailwind-merge": "^3.0.1",
 		"tailwindcss-animate": "^1.0.7"
 	},
