--- a/web-app/package.json
+++ b/web-app/package.json
@@ -12,6 +12,7 @@
 		"format:staged": "biome check --write --staged"
 	},
 	"dependencies": {
+		"@next/third-parties": "^15.1.7",
 		"@radix-ui/react-label": "^2.1.2",
 		"@radix-ui/react-slot": "^1.1.2",
 		"class-variance-authority": "^0.7.1",
