--- a/web-app/package.json
+++ b/web-app/package.json
@@ -31,6 +31,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@eslint/eslintrc": "^3.3.0",
+		"@tailwindcss/postcss": "^4.0.8",
 		"@types/node": "^22.13.5",
 		"@types/react": "^19.0.10",
 		"@types/react-dom": "^19.0.4",
@@ -41,7 +42,7 @@
 		"postcss": "^8.5.3",
 		"prettier": "^3.5.2",
 		"prettier-eslint": "^16.3.0",
-		"tailwindcss": "^3.4.17",
+		"tailwindcss": "^4.0.8",
 		"typescript": "^5.7.3"
 	}
 }
