--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,10 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:best-practices",
-    ":automergePatch"
+  "extends": ["config:best-practices", ":automergePatch"],
+  "packageRules": [
+    {
+      "extends": [":automergeStableNonMajor"],
+      "matchPackageNames": ["lucide-react"]
+    }
   ]
 }
