--- a/web-app/components.json
+++ b/web-app/components.json
@@ -4,7 +4,7 @@
 	"rsc": true,
 	"tsx": true,
 	"tailwind": {
-		"config": "tailwind.config.ts",
+		"config": "tailwind.config.cts",
 		"css": "src/styles/globals.css",
 		"baseColor": "zinc",
 		"cssVariables": true,
