--- a/web-app/package.json
+++ b/web-app/package.json
@@ -1,45 +1,51 @@
 {
-	"name": "web-app",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev --turbopack",
-		"build": "next build",
-		"build:wasm": "wasm-pack build ../lgtmoon-wasm --target web --out-dir ../web-app/pkg && mkdir -p ./public/pkg && cp ./pkg/*.wasm ./public/pkg/",
-		"start": "next start",
-		"lint": "next lint"
-	},
-	"dependencies": {
-		"@next/third-parties": "^15.1.7",
-		"@radix-ui/react-label": "^2.1.2",
-		"@radix-ui/react-popover": "^1.1.6",
-		"@radix-ui/react-slot": "^1.1.2",
-		"class-variance-authority": "^0.7.1",
-		"clsx": "^2.1.1",
-		"idb": "^8.0.2",
-		"lucide-react": "^0.477.0",
-		"next": "15.2.0",
-		"next-themes": "^0.4.4",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
-		"sonner": "^2.0.1",
-		"tailwind-merge": "^3.0.2",
-		"tailwindcss-animate": "^1.0.7"
-	},
-	"devDependencies": {
-		"@eslint/eslintrc": "3.3.0",
-		"@tailwindcss/postcss": "4.0.9",
-		"@types/node": "22.13.9",
-		"@types/react": "19.0.10",
-		"@types/react-dom": "19.0.4",
-		"eslint": "9.21.0",
-		"eslint-config-next": "15.2.0",
-		"eslint-config-prettier": "10.0.2",
-		"eslint-plugin-prettier": "5.2.3",
-		"postcss": "8.5.3",
-		"prettier": "3.5.3",
-		"prettier-eslint": "16.3.0",
-		"tailwindcss": "4.0.9",
-		"typescript": "5.8.2"
-	}
+  "name": "web-app",
+  "version": "0.1.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "build:wasm": "wasm-pack build ../lgtmoon-wasm --target web --out-dir ../web-app/pkg && mkdir -p ./public/pkg && cp ./pkg/*.wasm ./public/pkg/",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@next/third-parties": "^15.1.7",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "idb": "^8.0.2",
+    "lucide-react": "^0.477.0",
+    "next": "15.2.0",
+    "next-themes": "^0.4.4",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "sonner": "^2.0.1",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "3.3.0",
+    "@eslint/js": "^9.21.0",
+    "@next/eslint-plugin-next": "^15.2.1",
+    "@tailwindcss/postcss": "4.0.9",
+    "@types/node": "22.13.9",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
+    "eslint": "9.21.0",
+    "eslint-config-next": "15.2.0",
+    "eslint-config-prettier": "10.0.2",
+    "eslint-plugin-prettier": "5.2.3",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "postcss": "8.5.3",
+    "prettier": "3.5.3",
+    "prettier-eslint": "16.3.0",
+    "tailwindcss": "4.0.9",
+    "typescript": "5.8.2",
+    "typescript-eslint": "^8.26.0"
+  }
 }
