--- a/mise.toml
+++ b/mise.toml
@@ -1,5 +1,6 @@
 [tools]
 "cargo:wasm-pack" = "0.13.1"
+"go:github.com/evilmartians/lefthook" = "latest"
 node = "23"
 "npm:vercel" = "41.3.0"
 pnpm = "10.5.2"
