--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -22,6 +22,8 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
       - name: Setup mise
         uses: jdx/mise-action@5083fe46898c414b2475087cc79da59e7da859e8 # v2
+        with:
+          experimental: true
       - name: Build wasm
         working-directory: ./web-app
         run: pnpm build:wasm
