--- a/web-app/package.json
+++ b/web-app/package.json
@@ -36,9 +36,13 @@
     "@types/node": "22.13.9",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
+    "@typescript-eslint/parser": "^8.26.0",
     "eslint": "9.21.0",
     "eslint-config-next": "15.2.0",
     "eslint-config-prettier": "10.0.2",
+    "eslint-import-resolver-typescript": "^3.8.3",
+    "eslint-plugin-check-file": "^3.1.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "5.2.3",
     "eslint-plugin-react": "7.37.4",
     "eslint-plugin-react-hooks": "5.2.0",
