--- a/web-app/components.json
+++ b/web-app/components.json
@@ -4,7 +4,7 @@
   "rsc": true,
   "tsx": true,
   "tailwind": {
-    "config": "tailwind.config.cts",
+    "config": "tailwind.config.mts",
     "css": "src/styles/globals.css",
     "baseColor": "zinc",
     "cssVariables": true,
