--- a/web-app/package.json
+++ b/web-app/package.json
@@ -8,8 +8,7 @@
     "build": "next build",
     "build:wasm": "wasm-pack build ../lgtmoon-wasm --target web --out-dir ../web-app/pkg && mkdir -p ./public/pkg && cp ./pkg/*.wasm ./public/pkg/",
     "start": "next start",
-    "lint": "next lint",
-    "format": "prettier --write ."
+    "lint": "next lint"
   },
   "dependencies": {
     "@next/third-parties": "^15.1.7",
@@ -29,30 +28,12 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "3.3.0",
-    "@eslint/js": "9.21.0",
-    "@next/eslint-plugin-next": "15.2.1",
     "@tailwindcss/postcss": "4.0.9",
     "@types/node": "22.13.9",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
-    "@typescript-eslint/parser": "^8.26.0",
-    "eslint": "9.21.0",
-    "eslint-config-next": "15.2.0",
-    "eslint-config-prettier": "10.0.2",
-    "eslint-import-resolver-typescript": "^3.8.3",
-    "eslint-plugin-check-file": "^3.1.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "5.2.3",
-    "eslint-plugin-react": "7.37.4",
-    "eslint-plugin-react-hooks": "5.2.0",
     "postcss": "8.5.3",
-    "prettier": "3.5.3",
-    "prettier-eslint": "16.3.0",
-    "prettier-plugin-organize-imports": "4.1.0",
-    "prettier-plugin-tailwindcss": "0.6.11",
     "tailwindcss": "4.0.9",
-    "typescript": "5.8.2",
-    "typescript-eslint": "8.26.0"
+    "typescript": "5.8.2"
   }
 }
