--- a/web-app/package.json
+++ b/web-app/package.json
@@ -8,7 +8,8 @@
 		"build": "next build",
 		"build:wasm": "wasm-pack build ../lgtmoon-wasm --target web --out-dir ../web-app/pkg && mkdir -p ./public/pkg && cp ./pkg/*.wasm ./public/pkg/",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "biome lint --write",
+		"format": "biome format --write"
 	},
 	"dependencies": {
 		"@next/third-parties": "^15.1.7",
@@ -25,7 +26,8 @@
 		"react-dom": "^19.0.0",
 		"sonner": "^2.0.1",
 		"tailwind-merge": "^3.0.2",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.24.2"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
