--- a/web-app/package.json
+++ b/web-app/package.json
@@ -16,6 +16,7 @@
 		"@radix-ui/react-label": "^2.1.2",
 		"@radix-ui/react-popover": "^1.1.6",
 		"@radix-ui/react-slot": "^1.1.2",
+		"@vercel/speed-insights": "^1.2.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"idb": "^8.0.2",
