--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
 		"defaultBranch": "main"
 	},
 	"files": {
-		"ignore": ["public", "node_modules", "web-app/pkg", ".next"]
+		"ignore": ["public", "node_modules", "lgtmoon-wasm/pkg", ".next"]
 	},
 	"organizeImports": {
 		"enabled": true
