--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -25,8 +25,12 @@ jobs:
         uses: jdx/mise-action@5083fe46898c414b2475087cc79da59e7da859e8 # v2
         with:
           experimental: true
+      - name: Install dependencies
+        run: pnpm install
       - name: Build wasm
         run: pnpm build:wasm
+      - name: Check Types
+        run: pnpm check-types
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
       - name: Build Project Artifacts
