--- a/web-app/package.json
+++ b/web-app/package.json
@@ -9,7 +9,8 @@
 		"start": "next start",
 		"lint": "biome lint --write",
 		"format": "biome format --write",
-		"check-types": "tsc --noEmit"
+		"check-types": "tsc --noEmit",
+		"test:e2e": "playwright test"
 	},
 	"dependencies": {
 		"@next/third-parties": "^15.1.7",
@@ -34,6 +35,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
+		"@playwright/test": "^1.51.0",
 		"@tailwindcss/postcss": "4.0.12",
 		"@types/node": "22.13.9",
 		"@types/react": "19.0.10",
