--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -5,13 +5,24 @@ on:
   pull_request:
     branches: main
     types: [opened, synchronize]
+
+env:
+  LOG_LEVEL: debug
+
 jobs:
   renovate:
     runs-on: ubuntu-latest
     steps:
+      - name: Get token
+        id: get_token
+        uses: actions/create-github-app-token@v1
+        with:
+          private-key: ${{ secrets.RENOVATE_PRIVATE_KEY }}
+          app-id: ${{ secrets.RENOVATE_APP_ID }}
       - name: Checkout
         uses: actions/checkout@v4.2.2
       - name: Self-hosted Renovate
         uses: renovatebot/github-action@v41.0.13
         with:
-          token: ${{ secrets.RENOVATE_TOKEN }}
+          configurationFile: .github/renovate.global.json
+          token: ${{ steps.get_token.outputs.token }}
