--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -21,6 +21,14 @@ jobs:
           app-id: ${{ secrets.RENOVATE_APP_ID }}
       - name: Checkout
         uses: actions/checkout@v4.2.2
+      - name: Setup mise
+        uses: jdx/mise-action@5083fe46898c414b2475087cc79da59e7da859e8 # v2
+        with:
+          experimental: true
+      - name: Install dependencies
+        run: pnpm install
+      - name: Build wasm
+        run: pnpm build:wasm
       - name: Self-hosted Renovate
         uses: renovatebot/github-action@v41.0.13
         with:
