--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -1,7 +1,7 @@
 name: Renovate
 on:
-  schedule:
-    - cron: '0/15 * * * *'
+  # schedule:
+  #   - cron: '0/15 * * * *'
   workflow_dispatch:
 
 env:
@@ -19,12 +19,6 @@ jobs:
           app-id: ${{ secrets.RENOVATE_APP_ID }}
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-      - name: Setup mise
-        uses: jdx/mise-action@5083fe46898c414b2475087cc79da59e7da859e8 # v2
-        with:
-          experimental: true
-      - name: Install dependencies
-        run: pnpm install
       - name: Build wasm
         run: pnpm build:wasm
       - name: Self-hosted Renovate
