--- a/web-app/package.json
+++ b/web-app/package.json
@@ -13,6 +13,9 @@
 		"test:e2e": "playwright test"
 	},
 	"dependencies": {
+		"@auth/neon-adapter": "^1.8.0",
+		"@icons-pack/react-simple-icons": "^12.5.0",
+		"@neondatabase/serverless": "^1.0.0",
 		"@next/third-parties": "^15.1.7",
 		"@radix-ui/react-dialog": "^1.1.6",
 		"@radix-ui/react-label": "^2.1.2",
@@ -24,6 +27,7 @@
 		"idb": "^8.0.2",
 		"lucide-react": "^0.487.0",
 		"next": "15.3.0",
+		"next-auth": "5.0.0-beta.25",
 		"next-themes": "^0.4.4",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
