--- a/web-app/package.json
+++ b/web-app/package.json
@@ -13,6 +13,7 @@
 		"test:e2e": "playwright test"
 	},
 	"dependencies": {
+		"@auth/drizzle-adapter": "^1.8.0",
 		"@auth/neon-adapter": "^1.8.0",
 		"@icons-pack/react-simple-icons": "^12.5.0",
 		"@neondatabase/serverless": "^1.0.0",
@@ -25,11 +26,13 @@
 		"@vercel/speed-insights": "^1.2.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"drizzle-orm": "^0.41.0",
 		"idb": "^8.0.2",
 		"lucide-react": "^0.487.0",
 		"next": "15.3.0",
 		"next-auth": "5.0.0-beta.25",
 		"next-themes": "^0.4.4",
+		"postgres": "^3.4.5",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-error-boundary": "^5.0.0",
@@ -45,6 +48,7 @@
 		"@types/node": "22.14.1",
 		"@types/react": "19.1.1",
 		"@types/react-dom": "19.1.2",
+		"drizzle-kit": "^0.30.6",
 		"postcss": "8.5.3",
 		"tailwindcss": "4.1.3",
 		"typescript": "5.8.3"
