--- a/web-app/package.json
+++ b/web-app/package.json
@@ -15,6 +15,8 @@
 	"dependencies": {
 		"@auth/drizzle-adapter": "^1.8.0",
 		"@auth/neon-adapter": "^1.8.0",
+		"@aws-sdk/client-s3": "^3.787.0",
+		"@aws-sdk/s3-request-presigner": "^3.787.0",
 		"@icons-pack/react-simple-icons": "^12.5.0",
 		"@neondatabase/serverless": "^1.0.0",
 		"@next/third-parties": "^15.1.7",
@@ -24,6 +26,7 @@
 		"@radix-ui/react-slot": "^1.1.2",
 		"@radix-ui/react-tooltip": "^1.2.0",
 		"@vercel/speed-insights": "^1.2.0",
+		"axios": "^1.8.4",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"drizzle-orm": "^0.42.0",
@@ -48,6 +51,7 @@
 		"@types/node": "22.14.1",
 		"@types/react": "19.1.2",
 		"@types/react-dom": "19.1.2",
+		"dotenv": "^16.5.0",
 		"drizzle-kit": "0.31.0",
 		"postcss": "8.5.3",
 		"tailwindcss": "4.1.4",
