--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -10,6 +10,7 @@ jobs:
       R2_SECRET_ACCESS_KEY: ""
       R2_BUCKET_NAME: ""
       CLOUDFLARE_ACCOUNT_ID: ""
+      AUTH_SECRET: ""
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
