--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -6,6 +6,13 @@ jobs:
   test:
     env:
       POSTGRES_URL: ${{ secrets.TEST_POSTGRES_URL }}
+      R2_ACCESS_KEY_ID: ""
+      R2_SECRET_ACCESS_KEY: ""
+      R2_BUCKET_NAME: ""
+      CLOUDFLARE_ACCOUNT_ID: ""
+      AUTH_SECRET: ""
+      AUTH_GOOGLE_ID: ""
+      AUTH_GOOGLE_SECRET: ""
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
