--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -10,7 +10,7 @@ jobs:
       R2_SECRET_ACCESS_KEY: ""
       R2_BUCKET_NAME: ""
       CLOUDFLARE_ACCOUNT_ID: ""
-      AUTH_SECRET: ""
+      AUTH_SECRET: "test"
       AUTH_GOOGLE_ID: ""
       AUTH_GOOGLE_SECRET: ""
     timeout-minutes: 60
