--- a/web-app/biome.json
+++ b/web-app/biome.json
@@ -1,5 +1,4 @@
 {
-	"root": false,
 	"$schema": "https://biomejs.dev/schemas/2.2.3/schema.json",
-	"extends": ["../biome.json"]
+	"extends": "//"
 }
